[project]
name = "canelai-signals-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael Orozco"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]
packages = [{include = "canelai_signals_generator", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
